assets/css/record.css
body {
  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
}
h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 700;
}
* {
  box-sizing: border-box;
}
html {
  font-size: 10px;
}
.display-5 {
  font-size: 2rem;
}
@media (min-width: 321px) {
  html {
    font-size: 12px;
  }
  .display-5 {
    font-size: 2.2rem;
  }
}
@media (min-width: 448px) {
  html {
    font-size: 13px;
  }
  .display-5 {
    font-size: 2.5rem;
  }
}
@media (min-width: 576px) {
  html {
    font-size: 14px;
  }
}
@media (min-width: 672px) {

}
@media (min-width: 768px) {

}
@media (min-width: 992px) {
  html {
    font-size: 15px;
  }
}
@media (min-width: 1200px) {
  html {
    font-size: 16px;
  }
  .display-5 {
    font-size: 2.8rem;
  }
}
@media (min-width: 1300px) {
  .display-5 {
    font-size: 3rem;
  }
}
@media (min-width: 1400px) {
  html {
    font-size: 17px;
  }
}
.pb-6 {
  padding-bottom: 6rem;
}
.material-icons.md-48 {
  font-size: 2.5rem;
}
.material-icons.blue {
  color: #007bff;
}
.recorder-container {
  width: 4rem;
  background-color: #e74c3c;
  display: block;
  border-radius: 100%;
  box-shadow: 0px 0px 15px 2px #bdc3c7;
  cursor: default;
  transition: 0.3s all ease-in;
  position: relative;
}
.recorder-container .icon-microphone {
  color: #fff;
  font-size: 4rem;
  line-height: 4rem;
  display: block;
  text-align: center;
  transition: 0.1s all ease-in;
  position: relative;
}

.recorder-container .outer {
  width: 4rem;
  height: 4rem;
  -webkit-transform: scale(1);
  transform: scale(1);
  border-radius: 100%;
  position: absolute;
  background-color: transparent;
  border: 1px solid #7f8c8d;
  z-index: -1;
  transition: 1.5s all ease;
  -webkit-animation: woong 1.5s infinite;
  animation: woong 1.5s infinite;
}

.recorder-container .outer-2 {
  width: 4rem;
  height: 4rem;
  -webkit-transform: scale(1);
  transform: scale(1);
  border-radius: 100%;
  position: absolute;
  background-color: #bdc3c7;
  z-index: -1;
  transition: 1.5s all ease;
  -webkit-animation: woong-2 1.5s infinite;
  animation: woong-2 1.5s infinite;
  -webkit-animation-delay: 2.5s;
  animation-delay: 2.5s;
}
@-webkit-keyframes woong {
  0% {
    -webkit-trasform: scale(1.2);
  }
  50% {
    -webkit-transform: scale(1.8);
    opacity: 0.5;
  }
  100% {
    -webkit-transform: scale(2.4);
    opacity: 0;
  }
}

@-webkit-keyframes woong-2 {
  0% {
    -webkit-transform: scale(1.2);
    opacity: 0.6;
  }
  50% {
    -webkit-transform: scale(1.6);
    opacity: 0.5;
  }
  100% {
    -webkit-transform: scale(2);
    opacity: 0;
  }
}
canvas#visualizer {
  width: 100%;
  border: 1px solid white;
  height: 120px;
}
audio {
  width: 80%;
}
.border-3 {
  border: 3px solid #007bff;
}
.font-wt-900 {
  font-weight: 900;
}
.h-1r {
  height: 1rem;
}
.point-none {
  pointer-events: none;
}
.outline-0 {
  outline: 0;
  }
/* loader */
.overlay__content {
  left: 50%;
  position: fixed;
  top: 50%;
  transform: translate(-50%, -50%);
}
.spinner {
  width: 10rem;
  height: 10rem;
  display: inline-block;
  border-width: 12px;
  border-color: #007bff;
  border-top-color: #fff;
  animation: spin 1s infinite linear;
  border-radius: 100%;
  border-style: solid;
}
@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}
/* loader end */

/* 3d bar css */
/** CONTAINER **/
#graphcontainer {
  font-size: 0.2rem;
  position: relative;
  height: 44em;
  width: 9em;
  overflow: hidden;
}
@media (min-width: 672px) {
  #graphcontainer {
    font-size: 0.3rem;
  }
}
@media (min-width: 992px) {
  #graphcontainer {
    font-size: 0.4rem;
  }
}

/* left bottom patch */
#graphcontainer:before {
  content: "";
  position: absolute;
  z-index: 12;
  bottom: 0;
  left: 0;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 1.25em 1.25em 0;
  border-color: transparent transparent #fff transparent;
}

/** BACK CASING **/
/* Back panel */
#graphbackground {
  width: 6.5em;
  height: 43.25em;
  position: absolute;
  bottom: 0em;
  left: 0;
  background-color: rgba(0, 123, 255, 0.2);

  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

#graphbackground:before,
#graphbackground:after {
  content: "";
  position: absolute;
}

/* Bottom panel */
#graphbackground:before {
  bottom: -0.025em;
  left: 0.625em;
  width: 6.55em;
  height: 1.225em;
  background-color: rgba(0, 123, 255, 0.1);

  -webkit-transform: skew(45deg);
  -moz-transform: skew(45deg);
  -o-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
}

/* Right back panel */
#graphbackground:after {
  top: 21.6em;
  right: -22.125em;
  width: 43em;
  height: 1.225em;
  background-color: rgba(0, 123, 255, 0.27);

  -webkit-transform: rotate(90deg) skew(-45deg);
  -moz-transform: rotate(90deg) skew(-45deg);
  -o-transform: rotate(90deg) skew(-45deg);
  -ms-transform: rotate(90deg) skew(-45deg);
  transform: rotate(90deg) skew(-45deg);
}

/** FRONT CASING **/
/* Front panel */
#graphforeground {
  z-index: 3;
  position: absolute;
  width: 6.5em;
  height: 42em;
  bottom: 0em;
  left: 1.225em;
  background-color: rgba(0, 123, 255, 0.1);

  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

#graphforeground:before,
#graphforeground:after {
  content: "";
  position: absolute;
}

/* Left panel */
#graphforeground:before {
  bottom: 21em;
  right: -14em;
  width: 42em;
  height: 1.25em;
  background-color: rgba(0, 123, 255, 0.27);

  -webkit-transform: rotate(90deg) skew(-45deg);
  -moz-transform: rotate(90deg) skew(-45deg);
  -o-transform: rotate(90deg) skew(-45deg);
  -ms-transform: rotate(90deg) skew(-45deg);
  transform: rotate(90deg) skew(-45deg);
  overflow: hidden;
}

/* Top panel */
#graphforeground:after {
  top: -1.225em;
  right: 0.6em;
  width: 6.55em;
  height: 1.225em;
  background-color: rgba(0, 123, 255, 0.2);

  -webkit-transform: skew(45deg);
  -moz-transform: skew(45deg);
  -o-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
}

/** BAR GRAPH **/
#graphbar {
  -webkit-transition: height 1s linear;
  -moz-transition: height 1s linear;
  -o-transition: height 1s linear;
  -ms-transition: height 1s linear;
  transition: height 1s linear;
  z-index: 2;
  position: absolute;
  width: 7.75em;
  height: 0em;
  bottom: 0em; /* default bar state */
  left: 0;
  background-color: rgba(0, 123, 255);
}

#graphbar:before,
#graphbar:after {
  content: "";
  position: absolute;
}

/* top shadow */
#graphbar:before {
  top: -1.225em;
  left: 0.625em;
  width: 6.55em;
  height: 1.225em;
  background-color: rgba(0, 123, 255, 0.27);

  -webkit-transform: skew(45deg);
  -moz-transform: skew(45deg);
  -o-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
}

/* top fill */
#graphbar:after {
  top: -1.25em;
  left: 0;
  border-bottom: 1.25em solid rgba(0, 123, 255);
  border-left: 0 solid transparent;
  border-right: 1.275em solid transparent;
}

.prompt{
  min-height: 120px;
}

